--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.17.3",
-		"multer": "^1.4.4"
+		"morgan": "^1.10.0",
+		"multer": "^1.4.4",
+		"mysql": "^2.18.1"
 	}
 }
