--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"express": "^4.17.3",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.4",
-		"mysql": "^2.18.1"
+		"mysql": "^2.18.1",
+		"sequelize": "^6.17.0"
 	}
 }
